@@ -35,7 +35,7 @@ class CTextArea extends CTag{
 	}
 
 	public function setReadonly($value='yes'){
-		if($value==='yes')
+		if($value==='yes' || $value === true)
 			return $this->attributes['readonly'] = 'readonly';
 
 		$this->removeAttribute('readonly');
