@@ -2875,25 +2875,6 @@ ITEM_TYPE_CALCULATED $key = ''; $params = '';
 	return $frmTrig;
 	}
 
-	function insert_trigger_comment_form($triggerid){
-
-		$trigger = DBfetch(DBselect('SELECT t.*, h.* '.
-			' FROM triggers t, functions f, items i, hosts h '.
-			' WHERE t.triggerid='.$triggerid.
-				' AND f.triggerid=t.triggerid '.
-				' AND f.itemid=i.itemid '.
-				' AND i.hostid=h.hostid '));
-
-		$frmComent = new CFormTable(S_COMMENTS." for ".$trigger['host']." : \"".expand_trigger_description_by_data($trigger).'"');
-		$frmComent->setHelp("web.tr_comments.comments.php");
-		$frmComent->addVar("triggerid",$triggerid);
-		$frmComent->addRow(S_COMMENTS,new CTextArea("comments",$trigger["comments"],100,25));
-		$frmComent->addItemToBottomRow(new CButton("save",S_SAVE));
-		$frmComent->addItemToBottomRow(new CButtonCancel('&triggerid='.$triggerid));
-
-		$frmComent->show();
-	}
-
 	function insert_graph_form(){
 		$frmGraph = new CFormTable(S_GRAPH);
 		$frmGraph->setName('frm_graph');
